# flamai-svc-talking-avatar-embedding-generation

./: .dockerignore  .gitignore  LICENSE  README.md  app.py  pyproject.toml  runpod_app.py
.docker/: Dockerfile.cpu  Dockerfile.gpu
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/: RUNPOD_README.md
scripts/: embedding_gen.py
src/api/: handlers.py  models.py  routes.py  schema.py
src/core/: __init__.py  managers.py  process_manager.py  server_manager.py
src/services/: embedding_generator.py
src/utils/config/: config.yaml  settings.py
src/utils/config/modules/: embedding_generation.py  interfaces.py  loaders.py  processors.py  providers.py  section_providers.py  validators.py
src/utils/config/modules/config_sections/: __init__.py
src/utils/io/: reader.py
src/utils/resources/: logger.py
